Deployment fixes
